# rf2gpa

./: LICENSE  README.md  RubyFlVoigtFit-GUI.py  RubyFluorescencePeak(685-710nm) copy.ipynb  hook-ctypes.py  p1.1_RF.txt  p1.5_RF.txt  pyproject.toml  setup.py
mines_dac/: analysis.py  cli.py  file_dialog.py  validator.py
testfiles/: p1.2_RF.txt  p1.3_RF.txt  p1.4_RF.txt
